# epos

./: .dockerignore  .env.template  .gitignore  .gitmodules  CLAUDE.md  Dockerfile  Dockerfile.sim  README.md  compile_commands.json  docker-compose.yml
chikurin_control/: CMakeLists.txt  package.xml
chikurin_control/include/chikurin_control/body_tracker/: firing_controller.hpp  pan_tilt_controller.hpp  params.hpp  person_detector.hpp  scan_controller.hpp  target_tracker.hpp  tracker_ui.hpp
chikurin_control/models/: .gitignore
chikurin_control/src/: body_tracker_node.cpp  homing_service_node.cpp  pan_tilt_joy_node.cpp
chikurin_control/src/body_tracker/: firing_controller.cpp  pan_tilt_controller.cpp  person_detector.cpp  scan_controller.cpp  target_tracker.cpp  tracker_ui.cpp
chikurin_control/srv/: Homing.srv
chikurin_description/: CMakeLists.txt  package.xml
chikurin_description/config/: sim_controllers.yaml
chikurin_description/launch/: robot.launch.py  sim.launch.py
chikurin_description/rviz/: chikurin.rviz
chikurin_description/urdf/: chikurin.urdf.xacro  gazebo.urdf.xacro  ros2_control.urdf.xacro
docker/: Dockerfile  Dockerfile.sim  docker-compose.yml  docker-entrypoint.sh  joystick.config.yaml
epos/: CMakeLists.txt  epos_hardware.xml  package.xml
epos/include/: DifferentialDrive.h  EPOSController.h
epos/include/epos/: DifferentialDrive.h  EPOSController.h  EPOSHardwareInterface.h
epos/src/: DifferentialDrive.cpp  EPOSController.cpp  EPOSHardwareInterface.cpp  homing_service_node.cpp
epos/srv/: Homing.srv
shooter/: CMakeLists.txt  package.xml
shooter/config/: controllers.yaml
shooter/launch/: body_tracker.launch.py  face_tracker.launch.py  shooter.launch.py  sim.launch.py
shooter/src/: body_tracker_node.cpp  face_tracker_node.cpp
shooter/urdf/: shooter.urdf.xacro
shooter_bringup/: CMakeLists.txt  package.xml
shooter_bringup/config/: controllers.yaml
shooter_bringup/launch/: shooter.launch.py  shooter_with_homing.launch.py
shooter_bringup/urdf/: shooter_ros2_control.urdf.xacro
shooter_control/: CMakeLists.txt  package.xml
shooter_control/launch/: body_tracker.launch.py  pan_tilt_homing.launch.py  servo_trigger.launch.py
shooter_control/models/: README.md
shooter_control/scripts/: download_models.sh
shooter_control/src/: body_tracker_node.cpp  pan_tilt_homing_node.cpp  pan_tilt_joy_node.cpp  servo_trigger_node.cpp  servo_trigger_node.py
shooter_description/: CMakeLists.txt  package.xml
shooter_description/urdf/: shooter.urdf.xacro
shooter_simulation/: CMakeLists.txt  package.xml
shooter_simulation/config/: sim_controllers.yaml
shooter_simulation/launch/: sim.launch.py
shooter_simulation/urdf/: shooter_gazebo.urdf.xacro
shooter_simulation/worlds/: empty.sdf
src/: main.cpp
